--- a/medea&styles/style.css
+++ b/medea&styles/style.css
@@ -6,13 +6,17 @@
     "wdth" 100;
 }
 
+* {
+  margin: 0;
+}
+
 /* common shared style  */
 .btn-primary {
   border-radius: 5px;
   background: #FD6E0A;
   color: white;
   text-align: center;
-
+  border: none;
   font-size: 20px;
 
   font-weight: 700;
@@ -24,11 +28,26 @@
   padding: 18px 18px;
 }
 
+header {
+  background-image: url(../images/developer.png), url(../images/header_bg.png);
+
+
+  background-repeat: no-repeat;
+  background-size: contain, calc(50%);
+  background-position: top left, bottom right;
+  padding: 0px 40px 0px 185px;
+  margin: 105px auto;
+}
+
 /* nav styles */
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+
+
 
 }
 
@@ -69,4 +88,223 @@ nav li a {
   display: flex;
   align-items: center;
 
+}
+
+.banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.hardy {
+  width: 470px;
+
+
+}
+
+.header-section {
+  max-height: 658px;
+  max-width: 1280px;
+}
+
+.banner-greatings {
+  font-size: 36px;
+  font-weight: 600;
+  color: #474747;
+}
+
+.banner-title {
+  color: #181818;
+  font-size: 68px;
+  font-weight: 700px;
+}
+
+.banner-description {
+  color: #757575;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.banner-content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+}
+
+
+/* completed header related style */
+/* completed header related style */
+/* completed header related style */
+
+/* common shared style */
+
+.section {
+  width: 1100px;
+  height: 500px;
+  background-color: #FFF8F3;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+
+}
+
+.inner-box {
+
+  display: flex;
+  flex-direction: column;
+  width: 700px;
+  height: 250px;
+  text-align: center;
+  background-color: white;
+  gap: 30px;
+
+}
+
+.section-head {
+  color: #181818;
+
+
+  font-size: 22px;
+
+  font-weight: 700;
+
+
+}
+
+.section-des {
+  color: #757575;
+
+  font-size: 15px;
+
+  font-weight: 400;
+
+}
+
+.contactlist {
+  display: flex;
+  list-style: none;
+  justify-content: space-around;
+}
+
+.contact-head {
+  color: #757575;
+
+  font-size: 16px;
+
+  font-weight: 400;
+
+}
+
+.contact-details {
+  color: #474747;
+  font-size: 16px;
+  font-weight: 700;
+
+
+}
+
+/* what i do sectionwhat i do sectionwhat i do sectionwhat i do sectionwhat i do section */
+
+.what-i-do {
+  background-color: white;
+  margin-top: 105px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+
+.list-head {
+  font-size: 16px;
+}
+
+.what-i-do>ul {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.what-i-do>ul>li {
+  text-align: justify;
+  height: 300px;
+  padding: 50px 25px;
+
+
+  border: 1px solid rgba(128, 128, 128, 0.164);
+}
+
+.list-head {
+  margin: 20px 0;
+}
+
+/* end of what i do section stylesend of what i do section stylesvend of what i do section styles
+ */
+
+.resume {
+  display: flex;
+  flex-direction: column;
+  margin-top: 250px;
+  gap: 70px;
+}
+
+.resume-head {
+  padding-bottom: 20px;
+  color: #181818;
+  text-align: center;
+
+  font-size: 28px;
+  font-weight: 700;
+
+}
+
+
+
+.section-des {
+  display: flex;
+  gap: 65px;
+  background-color: white;
+}
+
+.education>ul>li {
+  list-style: none;
+
+}
+
+.education {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  gap: 50px;
+}
+
+.reference {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.institute {
+  color: #474747;
+
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.education-head {
+  color: #474747;
+
+  font-size: 24px;
+  font-weight: 700;
+
+}
+
+.small-block {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
