--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 }
 
 header {
-  background-image: url(../images/developer.png), url(../images/header_bg.png);
+  background-image: url(./images/developer.png), url(./images/header_bg.png);
 
 
   background-repeat: no-repeat;
