--- a/style.css
+++ b/style.css
@@ -407,11 +407,11 @@ input {
 
   header {
     margin: 30px 0px 30px 0px;
-    padding: 30px;
+    padding: 10px;
   }
 
   nav {
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin: 20px 0px 50px;
 
 
@@ -465,9 +465,15 @@ input {
     max-width: 576px;
     margin: 10px;
   }
-
+  .banner{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .banner-content{
+    padding: 10px;
+  }
   .banner>img {
-    display: none;
+    width: 80%;
 
 
   }
